; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/kcomedilib/extr_dio.c_comedi_dio_bitfield.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/kcomedilib/extr_dio.c_comedi_dio_bitfield.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_insn = type { i32, i32*, i32, i32 }

@INSN_BITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @comedi_dio_bitfield(i8* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.comedi_insn, align 8
  %10 = alloca [2 x i32], align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %12 = call i32 @memset(%struct.comedi_insn* %9, i32 0, i32 24)
  %13 = load i32, i32* @INSN_BITS, align 4
  %14 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 3
  store i32 %13, i32* %14, align 4
  %15 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 0
  store i32 2, i32* %15, align 8
  %16 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 0
  %17 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 1
  store i32* %16, i32** %17, align 8
  %18 = load i32, i32* %6, align 4
  %19 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 2
  store i32 %18, i32* %19, align 8
  %20 = load i32, i32* %7, align 4
  %21 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 0
  store i32 %20, i32* %21, align 4
  %22 = load i32*, i32** %8, align 8
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 1
  store i32 %23, i32* %24, align 4
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @comedi_do_insn(i8* %25, %struct.comedi_insn* %9)
  store i32 %26, i32* %11, align 4
  %27 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 1
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %8, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i32, i32* %11, align 4
  ret i32 %30
}

declare dso_local i32 @memset(%struct.comedi_insn*, i32, i32) #1

declare dso_local i32 @comedi_do_insn(i8*, %struct.comedi_insn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
